<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_night">
    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        app:cardCornerRadius="360dp"
        app:cardElevation="2dp"
        android:backgroundTint="#000">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/baseline_account_circle_24"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_edit_square_24"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title_name_user"
            android:textSize="13dp"
            android:textColorHint="#A1FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_account_box_24"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title_name_account_user"
            android:textSize="13dp"
            android:textColorHint="#A1FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_lock_24"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title_password"
            android:textSize="13dp"
            android:textColorHint="#A1FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_lock_24"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edtPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title_password_again_v2"
            android:textSize="13dp"
            android:textColorHint="#A1FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_local_phone_24"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title_phone_v2"
            android:textSize="13dp"
            android:textColorHint="#A1FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_email_24"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title_write_email"
            android:textSize="13dp"
            android:textColorHint="#A1FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:inputType="textEmailAddress"/>

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="35dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="2dp"
        android:backgroundTint="#3F51B5"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:text="@string/button_sign_up"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="#FFFFFF"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="80dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_already_have_an_account"
            android:textColor="#FFFFFF"
            android:textSize="12dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textColor="#FFFFFF"
            android:textSize="12dp"
            android:textStyle="bold"
            android:gravity="right"/>
    </LinearLayout>

</LinearLayout>