<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity"
    android:orientation="vertical"
    android:background="@color/background_night"
    android:gravity="center">
    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        app:cardCornerRadius="360dp"
        android:backgroundTint="#000">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/baseline_account_circle_24"/>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_password_recovery"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_account_box_24"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title_write_account"
            android:textSize="13sp"
            android:textColorHint="#A1FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_email_24"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title_write_email"
            android:textSize="13sp"
            android:textColorHint="#A1FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="13sp"
        android:textColorHint="#A1FFFFFF"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="35dp"
        android:paddingTop="10dp"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="35dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="2dp"
        android:backgroundTint="#3F51B5"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/btnForgot"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:text="@string/button_recovory"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="#FFFFFF"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="80dp">
        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/btnSignUpFg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_up_for_account"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold"
            android:gravity="right"/>

    </LinearLayout>


</LinearLayout>