<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/lnBookShow"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvShowBooks"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnRecently"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_recently_viewed"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvRecentlylistBook"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_emotional"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvListBook1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
            </androidx.recyclerview.widget.RecyclerView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_detective"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvListBook2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_investigate"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvListBook3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_personal_development"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvListBook4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            android:backgroundTint="#B83810"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/btnAllCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_see_more"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>