<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/background_night"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/btnMain"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textColor="#FFFFFF"
            android:textSize="12dp"
            android:background="@drawable/ic_house_solid"
            android:textStyle="bold"
            android:gravity="right"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        app:cardElevation="2dp"
        app:cardCornerRadius="360dp"
        android:backgroundTint="#000">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/baseline_account_circle_24"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_account_box_24"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title_account_name_v2"
            android:textSize="13dp"
            android:textColorHint="#A1FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_lock_24"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title_password"
            android:textSize="13dp"
            android:textColorHint="#A1FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"/>

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="35dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="2dp"
        android:backgroundTint="#3F51B5"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:text="@string/button_login"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="#FFFFFF"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_forgot_password"
            android:textColor="#FFFFFF"
            android:textSize="12dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_up_for_account"
            android:textColor="#FFFFFF"
            android:textSize="12dp"
            android:textStyle="bold"
            android:gravity="right"/>
    </LinearLayout>
</LinearLayout>