<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/txtStyleCategory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Thêm thể loại"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/txtStyleCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="Thêm thể loại"
        android:gravity="center"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp">
        <EditText
            android:id="@+id/edtBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_infor_category"
            android:textSize="15sp"
            android:textColorHint="#88000000"
            android:layout_marginStart="10dp"/>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/edtDiscriptionCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_write_description"
            android:textSize="15sp"
            android:textColorHint="#88000000"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:layout_marginBottom="10dp"
            android:paddingEnd="10dp"
            android:background="@android:color/transparent"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/btnAddCategory"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#239028">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:text="@string/button_more"
            android:gravity="center"
            android:textColor="#FFFFFF"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>